--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
             <button class="equals" value="=">=</button>
         </div>
     </main>
+    <script src="calculator.js"></script>
 </body>
 </html>
