--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
             <button class="equals" value="=">=</button>
         </div>
     </main>
-    <script src="calculator.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
